fix: spacing in ordered and unordered lists

--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -31,6 +31,10 @@ ul {
 ol,
 ul {
   padding-left: $space-3;
+  margin-bottom: $space-2;
+}
+
+ol ul, ul ol, ol ol, ul ul {
   margin-bottom: 0;
 }
 
